# mrisc32-simulator

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
sim/: CMakeLists.txt  config.hpp  cpu.cpp  cpu.hpp  cpu_simple.cpp  cpu_simple.hpp  elf32.cpp  elf32.hpp  elf32_defs.hpp  gpu.cpp  gpu.hpp  mr32sim.cpp  packed_float.hpp  perf_symbols.cpp  perf_symbols.hpp  ram.cpp  ram.hpp  syscalls.cpp  syscalls.hpp
support/gtksourceview/: mr32asm.lang
tools/sim/: cpu.hpp  cpu_simple.cpp  mr32sim.cpp  perf_symbols.cpp  perf_symbols.hpp
tools/support/gtksourceview/: mr32asm.lang
